[package]
name = "csv-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.17"
aws-config = "0.55"
aws-sdk-s3 = "0.28"
tokio = { version = "1", features = ["full"] }
csv-async = { version = "1", features = ["tokio"] }
mongodb = "2.8"  # Driver oficial do MongoDB
tokio-stream = "0.1"
lapin = "2.0"
sysinfo = "0.29"